[gd_scene load_steps=9 format=3 uid="uid://ba0cpffe61x4v"]

[ext_resource type="Script" path="res://Scripts/peashooter.gd" id="1_xtd6f"]
[ext_resource type="PackedScene" uid="uid://dhs2qjocyoamx" path="res://Scenes/pea.tscn" id="2_oliai"]
[ext_resource type="Texture2D" uid="uid://b482e8jqcukuj" path="res://Resource/kisspng-plants-vs-zombies-2-it-s-about-time-plants-vs-z-plants-vs-zombies-5ac085195fc079.1940394715225664253922.png" id="3_h2sq8"]
[ext_resource type="Script" path="res://Scripts/state_machine.gd" id="4_q25ao"]
[ext_resource type="Script" path="res://Scripts/state_leg_moving.gd" id="5_h1qle"]
[ext_resource type="Script" path="res://Scripts/state_leg_idle.gd" id="6_nby7q"]

[sub_resource type="CircleShape2D" id="CircleShape2D_tt601"]
radius = 31.0161

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_trewf"]
bg_color = Color(0.145098, 0.721569, 0, 1)

[node name="Peashooter" type="CharacterBody2D" groups=["Friendly"]]
script = ExtResource("1_xtd6f")
pea_scene = ExtResource("2_oliai")
health = null
speed = null
max_bullet = null

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2(-9, 37)
shape = SubResource("CircleShape2D_tt601")
debug_color = Color(0.0862745, 0.847059, 0.0235294, 0.419608)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_h2sq8")

[node name="Marker2D" type="Marker2D" parent="Sprite2D"]
unique_name_in_owner = true
position = Vector2(175, -105)
scale = Vector2(5, 5)

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Timers" type="Node" parent="."]

[node name="Shoot delay" type="Timer" parent="Timers"]
unique_name_in_owner = true
wait_time = 0.1

[node name="Iframe" type="Timer" parent="Timers"]
unique_name_in_owner = true

[node name="Reload" type="Timer" parent="Timers"]
unique_name_in_owner = true
wait_time = 3.0

[node name="State Machine" type="Node" parent="."]
script = ExtResource("4_q25ao")
initial_state = NodePath("Idle")

[node name="Moving" type="Node" parent="State Machine"]
script = ExtResource("5_h1qle")

[node name="Idle" type="Node" parent="State Machine"]
script = ExtResource("6_nby7q")

[node name="Health Bar" type="ProgressBar" parent="."]
unique_name_in_owner = true
offset_left = -50.0
offset_top = -83.0
offset_right = 50.0
offset_bottom = -56.0
theme_override_styles/fill = SubResource("StyleBoxFlat_trewf")
value = 100.0

[node name="Mag" type="Label" parent="."]
unique_name_in_owner = true
offset_left = -32.0
offset_top = 63.0
offset_right = 16.0
offset_bottom = 96.0
theme_override_font_sizes/font_size = 16
text = "ligma"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Node" type="Node" parent="."]

[connection signal="timeout" from="Timers/Shoot delay" to="." method="_on_shoot_delay_timeout"]
[connection signal="timeout" from="Timers/Iframe" to="." method="_on_iframe_timeout"]
[connection signal="timeout" from="Timers/Reload" to="." method="_on_reload_timeout"]
